apps/headlamp/base/ingress-secure.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-secure
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`headlamp.mimotej.stream`)
      kind: Rule
      middlewares:
        - name: middleware-oidc
          namespace: traefik
        - name: middleware-crowdsec
          namespace: traefik
        - name: middleware-geoblock
          namespace: traefik
        - name: headlamp-middleware-headers
        - name: middleware-whitelist
          namespace: traefik
      services:
        - name: headlamp
          port: 80
  tls:
    secretName: headlamp-tls
