apps/headlamp/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`headlamp.internal`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
